--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -10,14 +10,13 @@
   }
   
   .logo {
-    width: 100px;
     margin-left: 10px;
   }
   
   .navbar__tabs {
     display: flex;
     list-style: none;
-    margin: 0;
+    /* margin-left: -50px; */
     font-size: 12px;
     font-weight: 800;
     padding: 0;
