--- a/src/App.css
+++ b/src/App.css
@@ -89,12 +89,13 @@
 }
 .container{
   width: 100%;
-  display: flex;
+  /* display: flex; */
   gap: 5rem;
   margin: 0%;
   padding: 0%;
   /* border: 1px solid; */
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  
 }
 .sidebar{
   /* width: 20%; */
